--- a/css/styles-my-progress-template.css
+++ b/css/styles-my-progress-template.css
@@ -18,10 +18,13 @@
   overflow-y: auto; /* enable vertical scrolling if content overflows */
 }
 
-/* Button within the main container */
+/* nav button  */
 
-#my-progress-div-content button {
-  margin-right: 12rem;
+#my-progress-div-content nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 /* Container for individual course cards */
@@ -180,12 +183,6 @@ img#logo-img[alt="TokioSchool icon"],
 
   span.course-year {
     font-size: 1.5rem;
-  }
-
-  /* Button margin adjustment for landscape */
-
-  #my-progress-div-content button {
-    margin-right: 45rem;
   }
 
   /* Font size for subject list items in landscape */
